crosshair/examples/icontract/bugs_detected/wrong_sign.out
wrong_sign.py:5: error: false when calling some_func(x = 1) (which returns -999)
